--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,3 +1,3 @@
 TEAM_ID=
-BUNDLE_ID=com.landomen.composemultiplatform.coin.ComposeMultiplatformCoinSample
-APP_NAME=ComposeMultiplatformCoinSample
+BUNDLE_ID=com.landomen.composemultiplatform.coil.ComposeMultiplatformCoinSample
+APP_NAME=ComposeMultiplatformCoilSample
